--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -31,8 +31,8 @@
     </button>
   </div>
   <div class="card-body">
-    <button type="button" class="btn btn-primary" (click)="addToCart()">
-      Agregar al carro
+    <button type="button" class="btn btn-primary" (click)="togleMovieInCart()">
+      {{ isMovieInCart() ? "Eliminar del" : "Agregar al" }} carro
     </button>
   </div>
 </div>
