--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div class="container">
-  <app-header></app-header>
-  <app-movies-list></app-movies-list>
-</div>
+<app-authentication></app-authentication>
