Se agrega vista de registro

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,4 @@
-<div class="login-container">
-  <img src="./assets/img/login.png" alt="" width="50%" />
-  <br />
-  <h1>Login</h1>
+<div class="mt30">
   <mat-form-field appearance="fill" class="w80">
     <mat-label>Usuario</mat-label>
     <input
@@ -11,7 +8,7 @@
       id="new-user"
       autocomplete="new-user"
     />
-    <!-- <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error> -->
+    <mat-error *ngIf="true">dsadsadsadsa</mat-error>
   </mat-form-field>
   <mat-form-field appearance="fill" class="w80">
     <mat-label>Contraseña</mat-label>
