Se aplica angular flex layout

--- a/src/app/components/movies-list/movies-list.component.html
+++ b/src/app/components/movies-list/movies-list.component.html
@@ -1,4 +1,13 @@
 <h1>Lista de Peliculas</h1>
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
-  <app-movie *ngFor="let movie of movieList" [movie]="movie"></app-movie>
+<div fxLayout="row wrap" class="w100">
+  <app-movie
+    fxFlex="25%"
+    fxFlex.xs="100%"
+    fxFlex.sm="50%"
+    fxFlex.md="33%"
+    fxFlex.lg="25%"
+    *ngFor="let movie of movieList"
+    [movie]="movie"
+    class="w100 p10"
+  ></app-movie>
 </div>
