--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ mat-form-field {
 }
 
 .d-flex-center-between {
-  display: flex;
+  display: flex !important;
   align-items: center;
   justify-content: space-between;
 }
@@ -40,6 +40,9 @@ mat-form-field {
   width: 80%;
 }
 
+.p10 {
+  padding: 10px;
+}
 .pt30 {
   padding-top: 30px;
 }
