--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -40,7 +40,7 @@
 
 <mat-card class="example-card">
   <img mat-card-image [src]="movie.img" [alt]="movie.name" />
-  <mat-card-header class="jc-between">
+  <mat-card-header class="jc-between mat-card-header-text-display-none">
     <div class="mr15">
       <mat-card-title>{{ movie.name }}</mat-card-title>
       <mat-card-subtitle>{{ movie.detail.category }}</mat-card-subtitle>
@@ -49,7 +49,9 @@
       ${{ movie.price }}
     </button>
   </mat-card-header>
-  <mat-card-content *ngIf="showDetail"> </mat-card-content>
+  <mat-card-content *ngIf="showDetail">
+    <app-movie-details [detail]="movie.detail"></app-movie-details>
+  </mat-card-content>
   <mat-card-actions class="d-flex-center-between">
     <button mat-button (click)="toggleDetail()">
       {{ showDetail ? "Menos" : "Más" }} información
