Se arregla el header para que use angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-movies-list></app-movies-list>
+<app-header></app-header>
+<div class="u-container">
+  <app-movies-list></app-movies-list>
+</div>
