--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<ul class="nav justify-content-end navbar fixed-top navbar-light bg-light p-3">
+<!-- <ul class="nav justify-content-end navbar fixed-top navbar-light bg-light p-3">
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="#">Active</a>
   </li>
@@ -13,3 +13,10 @@
   </li>
   <app-cart-icon></app-cart-icon>
 </ul>
+ -->
+<mat-toolbar color="primary" class="app-toolbar">
+  <span>Video Club</span>
+  <span class="example-spacer"></span>
+  <button mat-button class="mx15"><mat-icon>logout</mat-icon>Basic</button>
+  <app-cart-icon class="mx15"></app-cart-icon>
+</mat-toolbar>
