--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,20 @@ mat-form-field {
   margin-bottom: 15px;
 }
 
+.mat-card-header-text-display-none .mat-card-header-text {
+  display: none !important;
+}
+
+.u-container {
+  display: flex;
+  justify-content: center;
+}
+
+.u-container > * {
+  width: 90%;
+  max-width: 1300px;
+}
+
 .jc-between {
   display: flex !important;
   justify-content: space-between;
@@ -56,6 +70,10 @@ mat-form-field {
   margin-top: 30px;
 }
 
+.mx15 {
+  margin-left: 15px;
+  margin-right: 15px;
+}
 .mb15 {
   margin-bottom: 15px;
 }
