--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-header></app-header>
-<div class="u-container">
-  <app-movies-list></app-movies-list>
-</div>
+<router-outlet></router-outlet>
