--- a/src/app/views/cart/cart.component.html
+++ b/src/app/views/cart/cart.component.html
@@ -1,1 +1,51 @@
-<p>cart works!</p>
+<div class="u-container">
+  {{ movies | json }}
+
+  <table mat-table [dataSource]="source" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Item</th>
+      <td mat-cell *matCellDef="let movie">{{ movie.name }}</td>
+      <td mat-footer-cell *matFooterCellDef>Total</td>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Cost</th>
+      <td mat-cell *matCellDef="let movie">
+        {{ movie.price | currency }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef class="fw-500">
+        {{ getTotal() | currency }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let movie">
+        <button
+          mat-icon-button
+          color="warn"
+          aria-label="Delete from cart"
+          (click)="deleteFromCart(movie.id)"
+        >
+          <mat-icon>clear</mat-icon>
+        </button>
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+    <tr
+      mat-header-row
+      *matHeaderRowDef="displayedColumns"
+      class="example-first-header-row"
+    ></tr>
+
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+    <tr
+      mat-footer-row
+      *matFooterRowDef="displayedColumns"
+      class="example-first-footer-row"
+    ></tr>
+  </table>
+
+  <app-movies-list></app-movies-list>
+</div>
