--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,8 @@ mat-form-field {
 
 .u-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .u-container > * {
