Se agrega navegacion faltante

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
-<mat-toolbar color="primary" class="app-toolbar">
-  <span>Video Club</span>
+<mat-toolbar color="primary" class="app-toolbar" *ngIf="show">
+  <button mat-button class="mx15" routerLink="/home">VideoClub</button>
   <span class="example-spacer"></span>
-  <button mat-button class="mx15"><mat-icon>logout</mat-icon>Basic</button>
-  <app-cart-icon class="mx15"></app-cart-icon>
+  <button mat-button class="mx15" routerLink="/">
+    <mat-icon>logout</mat-icon>Salir
+  </button>
+  <app-cart-icon class="mx15" routerLink="/cart"></app-cart-icon>
 </mat-toolbar>
