--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@ mat-form-field {
 }
 
 .u-container > * {
-  width: 90%;
+  width: 80%;
   max-width: 1300px;
 }
 
@@ -35,10 +35,20 @@ mat-form-field {
   display: flex !important;
   justify-content: space-between;
 }
+.jc-end {
+  display: flex !important;
+  justify-content: flex-end;
+}
+
+.jc-center {
+  display: flex !important;
+  justify-content: center;
+}
 .al-center {
   display: flex !important;
   align-items: center;
 }
+
 .d-flex-center-between {
   display: flex !important;
   align-items: center;
@@ -52,7 +62,7 @@ mat-form-field {
 }
 
 .h100 {
-  height: calc(100% - 64px);
+  min-height: calc(100vh - 64px);
 }
 
 .w100 {
@@ -66,11 +76,18 @@ mat-form-field {
 .p10 {
   padding: 10px;
 }
+.p20 {
+  padding: 20px;
+}
 .p30 {
   padding: 30px;
 }
 .pt30 {
   padding-top: 30px;
+}
+
+.mb0 {
+  margin-bottom: 0 !important;
 }
 
 .mt30 {
@@ -80,6 +97,11 @@ mat-form-field {
 .mx15 {
   margin-left: 15px;
   margin-right: 15px;
+}
+
+.my15 {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 .mb15 {
   margin-bottom: 15px;
@@ -91,6 +113,24 @@ mat-form-field {
   margin-right: 15px;
 }
 
+.ml30 {
+  margin-left: 30px;
+}
+.mr30 {
+  margin-right: 30px;
+}
+.mx30 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.my30 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.mt30 {
+  margin-top: 30px;
+}
 .not-clickeable {
   pointer-events: none;
 }
