Se lleva logica del detalle a la vista de detalle

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,5 +4,11 @@
   <button mat-button class="mx15" routerLink="/">
     <mat-icon>logout</mat-icon>Salir
   </button>
-  <app-cart-icon class="mx15" routerLink="/cart"></app-cart-icon>
+  <button mat-button class="mx15" routerLink="/cart">
+    <app-cart-icon
+      class="mx15"
+      routerLink="/cart"
+      style="cursor: pointer"
+    ></app-cart-icon>
+  </button>
 </mat-toolbar>
