--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -1,20 +1,20 @@
-<mat-card class="example-card">
+<mat-card class="example-card w100 cart-container">
   <img mat-card-image [src]="movie.img" [alt]="movie.name" />
   <mat-card-header class="jc-between mat-card-header-text-display-none">
     <div class="mr15">
       <mat-card-title>{{ movie.name }}</mat-card-title>
-      <mat-card-subtitle>{{ movie.detail.category }}</mat-card-subtitle>
+      <mat-card-subtitle class="mb0">{{
+        movie.detail.category
+      }}</mat-card-subtitle>
     </div>
     <button mat-mini-fab color="accent" class="not-clickeable">
       ${{ movie.price }}
     </button>
   </mat-card-header>
-  <mat-card-content *ngIf="showDetail">
-    <app-movie-details [detail]="movie.detail"></app-movie-details>
-  </mat-card-content>
-  <mat-card-actions class="d-flex-center-between">
-    <button mat-button (click)="toggleDetail()">
-      {{ showDetail ? "Menos" : "Más" }} información
+
+  <mat-card-actions class="d-flex-center-between actions-container">
+    <button mat-button [routerLink]="['/movie', movie.id]">
+      Mas información
     </button>
     <button
       mat-fab
