--- a/src/app/views/cart/cart.component.css
+++ b/src/app/views/cart/cart.component.css
@@ -1,3 +1,6 @@
+.mat-table {
+  margin-top: 80px;
+}
 .mat-column-price {
   width: 32px;
   text-align: right;
@@ -5,4 +8,19 @@
 .mat-column-actions {
   width: 50px;
   text-align: right;
+}
+
+.mat-column-image {
+  width: 80px;
+  padding-right: 15px;
+}
+
+.mat-column-image > img {
+  width: 100%;
+}
+
+.no-movies {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
