--- a/src/app/views/cart/cart.component.html
+++ b/src/app/views/cart/cart.component.html
@@ -1,11 +1,19 @@
-<div class="u-container">
-  {{ movies | json }}
-
-  <table mat-table [dataSource]="source" class="mat-elevation-z8">
+<div class="u-container h100">
+  <table
+    mat-table
+    [dataSource]="source"
+    class="mat-elevation-z8"
+    *ngIf="movies.length"
+  >
+    <ng-container matColumnDef="image">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let movie"><img [src]="movie.img" alt="" /></td>
+      <td mat-footer-cell *matFooterCellDef><strong> Total </strong></td>
+    </ng-container>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Item</th>
       <td mat-cell *matCellDef="let movie">{{ movie.name }}</td>
-      <td mat-footer-cell *matFooterCellDef>Total</td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
     <ng-container matColumnDef="price">
@@ -13,9 +21,7 @@
       <td mat-cell *matCellDef="let movie">
         {{ movie.price | currency }}
       </td>
-      <td mat-footer-cell *matFooterCellDef class="fw-500">
-        {{ getTotal() | currency }}
-      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
@@ -30,7 +36,9 @@
           <mat-icon>clear</mat-icon>
         </button>
       </td>
-      <td mat-footer-cell *matFooterCellDef></td>
+      <td mat-footer-cell *matFooterCellDef class="fw-500">
+        <strong> {{ getTotal() | currency }}</strong>
+      </td>
     </ng-container>
     <tr
       mat-header-row
@@ -46,6 +54,12 @@
       class="example-first-footer-row"
     ></tr>
   </table>
-
-  <app-movies-list></app-movies-list>
+  <div *ngIf="!movies.length" class="d-flex-center-center h100">
+    <div class="no-movies">
+      <h2>No tienes ninguna pelicula en el carro!!!</h2>
+      <button mat-raised-button color="primary" routerLink="/home">
+        Volver al Inicio
+      </button>
+    </div>
+  </div>
 </div>
