Se implementa loading, loadingComponent y loadingInterceptor

--- a/src/app/views/cart/cart.component.html
+++ b/src/app/views/cart/cart.component.html
@@ -1,3 +1,4 @@
+<app-loading></app-loading>
 <div class="u-container h100">
   <table
     mat-table
@@ -54,7 +55,7 @@
       class="example-first-footer-row"
     ></tr>
   </table>
-  <div *ngIf="!movies.length" class="d-flex-center-center h100">
+  <div *ngIf="noMovies" class="d-flex-center-center h100">
     <div class="no-movies">
       <h2>No tienes ninguna pelicula en el carro!!!</h2>
       <button mat-raised-button color="primary" routerLink="/home">
