Se implementa servicio http para llamar a api dedicada

--- a/src/app/views/cart-without-table/cart-without-table.component.html
+++ b/src/app/views/cart-without-table/cart-without-table.component.html
@@ -1,4 +1,6 @@
 <div class="u-container h100">
+  hola
+  <pre>{{ movies | json }}</pre>
   <div *ngIf="movies.length">
     <mat-list class="list">
       <mat-list-item *ngFor="let movie of movies">
