--- a/src/app/views/movie-detail/movie-detail.component.html
+++ b/src/app/views/movie-detail/movie-detail.component.html
@@ -1,4 +1,5 @@
-<mat-card class="example-card w80">
+<app-loading></app-loading>
+<mat-card class="example-card w80" *ngIf="!loading">
   <div class="movie-container" fxLayout="row">
     <div fxHide.sm fxHide.xs fxFlex="300px" class="mr30">
       <img [src]="movie.img" [alt]="movie.name" class="poster my30 w100" />
