--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar color="primary" class="app-toolbar" *ngIf="show">
   <button mat-button class="mx15" routerLink="/home">VideoClub</button>
   <span class="example-spacer"></span>
+  <span class="welcome" *ngIf="user"
+    >Bienvenido {{ user.name + " " + user.lastname }}</span
+  >
   <button mat-button class="mx15" routerLink="/">
     <mat-icon>logout</mat-icon>Salir
   </button>
