Se crea vista de registro de pelicula solo visible para el administrador

--- a/src/app/views/cart/cart.component.html
+++ b/src/app/views/cart/cart.component.html
@@ -57,7 +57,7 @@
   </table>
   <div *ngIf="noMovies" class="d-flex-center-center h100">
     <div class="no-movies">
-      <h2>No tienes ninguna pelicula en el carro!!!</h2>
+      <h2>No tienes ninguna película en el carro!!!</h2>
       <button mat-raised-button color="primary" routerLink="/home">
         Volver al Inicio
       </button>
