--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,6 +4,9 @@
   <span class="welcome" *ngIf="user"
     >Bienvenido {{ user.name + " " + user.lastname }}</span
   >
+  <button mat-button class="mx15" routerLink="/newMovie" *ngIf="isUserAdmin()">
+    <mat-icon>add_circle_outline</mat-icon>Nueva Película
+  </button>
   <button mat-button class="mx15" routerLink="/">
     <mat-icon>logout</mat-icon>Salir
   </button>
