--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,10 @@ mat-form-field {
   display: flex !important;
   align-items: center;
 }
-
+.fd-column {
+  display: flex;
+  flex-direction: column;
+}
 .d-flex-center-between {
   display: flex !important;
   align-items: center;
@@ -99,12 +102,16 @@ mat-form-field {
   padding-top: 30px;
 }
 
+.py30 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 .mb0 {
   margin-bottom: 0 !important;
 }
 
 .mt30 {
-  margin-top: 30px;
+  margin-top: 30px !important;
 }
 
 .mx15 {
