Se agrega hint de user admin

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="mt30">
   <form [formGroup]="form" (ngSubmit)="submit()">
+    <pre>User: "admin" para acceder como admin</pre>
     <mat-form-field appearance="fill" class="w80">
       <mat-label>Usuario</mat-label>
       <input
